--- a/staff_page.html
+++ b/staff_page.html
@@ -3,8 +3,8 @@
 <head>
 <style>
 #header {
-    background-color:black;
-    color:blue;
+    background-color:grey;
+    color:back;
     text-align:center;
     padding:15px;
 }
@@ -45,7 +45,7 @@ img {
 }
 
 table, td {
-  border: 1px #70b8ff dashed;
+  border: 1px #666699 dashed;
 }
 
 <!-- html page -->
@@ -86,10 +86,6 @@ FAQ
             </tbody>
         </table><br><br>
 
-
-
-
-
 <h1>Service Department:</h1>
         <table class="profiles">
             <thead>
@@ -111,7 +107,6 @@ FAQ
             </tbody>
         </table><br><br>
 
-
 <h1>Parts Department:</h1>
         <table class="profiles">
             <thead>
@@ -132,7 +127,6 @@ FAQ
             </tbody>
         </table><br><br>
 
-
 <h1>Finance Dept:</h1>
 <body>
         <table class="profiles">
@@ -147,13 +141,9 @@ FAQ
                             <img src ="http://cp91279.biography.com/Harrison-Ford_Early-Years_HD_768x432-16x9.jpg">
                         </a><br>Brian<br>555-5557</td>
                         <td>  
-
                 </tr>
             </tbody>
         </table><br><br>
-
-
-
 </div>
 
 <div id="footer">
