--- a/staff_page.html
+++ b/staff_page.html
@@ -127,7 +127,7 @@ FAQ
             </tbody>
         </table><br><br>
 
-<h1>Finance Dept:</h1>
+<h1>Finance Department:</h1>
 <body>
         <table class="profiles">
             <thead>
