--- a/staff_page.html
+++ b/staff_page.html
@@ -1,3 +1,4 @@
+<!-- Basic HTML/CSS staff page for CDK Global -->
 <head>
 <style>
 
@@ -7,14 +8,15 @@
     text-align:center;
     padding:15px;
 }
+
 #nav {
-    color: red;
+    color:red;
     position: absolute;
     top: 40px;
     right: 30px;
     display: inline-block;
-
 }
+
 #departments {
     color:black;
     width:370px;
@@ -47,10 +49,12 @@ table, td {
   border: 1px #666699 dashed;
 }
 
-<!-- html page -->
+<!-- end of css, html page begins -->
 
 </style>
 </head>
+
+<title>CDK Staff</title>
 
 <div id="header">
 <h1>Staff Page</h1>
