--- a/staff_page.html
+++ b/staff_page.html
@@ -21,7 +21,7 @@
     color:black;
     width:370px;
     float:left;
-    padding:10px; 
+    padding:80px; 
 }
 
 #footer {
@@ -37,16 +37,22 @@
   color: Navy;
   padding: 20px;
   width: 120%;
-  margin: auto;
+  margin: 80px;
 }
 
 img {
+  border-radius: 50%;
   width:150px;
   height:150px;
+  padding: 40px;
 }
 
 table, td {
   border: 1px #666699 dashed;
+}
+
+body {
+    background-image: url("https://analogaddiction.files.wordpress.com/2013/08/grey-background-for-site11.jpg");
 }
 
 <!-- end of css, html page begins -->
@@ -55,6 +61,7 @@ table, td {
 </head>
 
 <title>CDK Staff</title>
+
 
 <div id="header">
 <h1>Staff Page</h1>
